--- a/Network/用語集.md
+++ b/Network/用語集.md
@@ -1,12 +1,422 @@
 
 
-・勉強 : TCP/IPの通信,wellknownport,ネットワーク接続方式と関連技術
+●ARP
+IPアドレスからMACアドレスを取得するためのプロトコルなのは分かったが、どのような場面で使うのかイメージできなかった。
+開設を読んで思ったのは、インターネット層からデータリンク層に行くときに、MACフレームヘッダーを追加すると思うのだが、
+その時ではないかと思う。
+送りたいIPアドレスはわかっているので、じゃあそのIPアドレスを持っているMACアドレスはどれってのを調べる時に使うプロトコルなのでは？
+ちなみに社内通信限定じゃないかな？外部との通信なら必ずルーターのMACアドレスになると思うので。
+というか、MACアドレスが必要となる範囲事態、LAN内に限られるだろう。WANになったらIPアドレスになるので、やっぱりLANの中の話だ。
 
-3かかけて1ページをやった計算になるが、この量でみると、とても来年の4月には間に合わない気がする。
-せめて1日1ページやりたいところだ。
-休日はさらに拍車をかけて3ページとか奮発しても問題ない。
+IP→MAC
 
-自分の言葉に置き換えて説明できないと意味ない気がするが、ほとんどまとめられているからなぁ。
+●RARP : Reverse ARP : 逆アドレス解決プロトコル
+MACアドレスからIPアドレスを取得するためのプロトコル。
+電源入れたときに、MACアドレスから自分のIPアドレスを知るために使う。
+これを実現するためにはRARPサーバーが必要になるみたい。
+電源入れる→MACアドレスを入れたRARP要求をブロードキャストする→このサーバーがIPアドレスを返す。
+
+MAC→IP
+
+
+●PPP : Point To Point Protocol
+https://www.youtube.com/watch?v=1IeXxPoAC6M&ab_channel=qtyoshimoto
+この動画がわかりやすかった。
+
+なるほどね。データの送信はビット列で行う
+上位層はHTTP,トランスポート層はTCP,インターネット層はIP。
+じゃあデータリンク層は？→実はないので、それを埋めるためにPPPが入るという仕組みらしい。
+
+2点間をポイントツーポイント接続するためのデータリンクプロトコルって言われてもピン来ない。
+WANを介して2つのノードをダイヤルアップ接続するときに使用される。
+
+元々はダイヤルアップで使っていたというだけ。今はダイヤルアップなんて使わない。
+殆どPPPoEを使う。こいつは技術の基礎的な意味合いが強い。
+もともとはこいつの前身の技術に欠点が多かったから、PPPが開発された。
+主に紹介する機能がなかったのでそれを追加したのがPPP。
+で、結構よかったのでPPPoEとかPPPoAとかに発展していったというわけ。
+
+PPPで行う主な機能
+・IP情報のカプセル転送
+・上位層プロトコルの識別
+・ユーザー認証
+・圧縮
+・マルチリンク
+
+主に2つのプロトコルから成り立っている。
+上位層に依存する部分 : NCP : Network Control Protocol
+・上位層プロトコルの識別
+PPPフレーム内部、データ部分に上位層のプロトコルを識別するためのセグメントを含めるのがこれに当たるらしい。
+
+上位層に依存しない部分 : LCP : Link Control Protocol
+・ユーザー認証
+PAP : Password Authentication Protocol
+平文でパスワードを送って認証を行う方式。
+
+CHAP : Challenge Handshake Authentication Protocol
+暗号化したキーからと生成した文字列とを組み合わせて認証を行う方式。
+
+・圧縮
+TCPヘッダ、IPヘッダには変化するものが決まっているので、その変化する部分だけを送ればデータ量を減らせる→圧縮できるというわけ。
+
+・マルチリンク
+データを分割して、複数の回線に小分けして送る。
+
+
+●ダイヤルアップ接続
+https://wa3.i-3-i.info/word14699.html
+ﾋﾟｰﾋﾟｰﾋﾟｰｷﾞｮｰｰｰってやつ。
+インターネットに接続する際のやり方のひとつであり普通に電話をかけて接続するやり方です。
+言い方を変えるとFAXっぽい仕組みのインターネットのやり方。
+
+
+●PPPoE : PPP over Ethernet
+IDとパスワードを使った認証が必要なインターネット接続くらいの認識で。
+プロバイダーからもらったIDとパスワードで接続のやり取りするとき、PPPoE接続するっていうでしょ。
+まぁ、ざっくり言えば、インターネットやり始めるのに認証が必要なあれってことでとりあえずは大丈夫なはず。
+PPPが便利なので、PPPにイーサネットの規格も載せて運用しましょうってやつ。
+
+電話回線を前提としたルールである「PPP（Point-to-Point Protocol）」をイーサネットへ応用した接続方式です。
+PPPとは、電話回線を使ったダイヤルアップ接続でインターネットにアクセスしていた時代に用いられていたルールです。
+その後、インターネット通信技術の発達で、ADSLなどの高速インターネット回線が登場しましたが、
+ADSLを利用するときにはPCとADSLモデム間を、イーサネットで接続する必要がありました。
+つまり、イーサネット上でPPPの機能を使う必要が出てきたわけですが、これを解決するために作られたのがPPPoEという接続方式です。
+
+
+●IPoE
+IPv6で直接インターネットに接続する方式らしい。
+まぁ、IPv6なら絶対に一意になるのでそういうこともできるのだろう。
+
+
+●IEEE802.3規格
+データリンク層を更に2つの層に分割して考える。
+・LLC副層 : Logical Link Control : 論理リンク制御
+→物理層におけるLANで使用する伝送媒体の規格
+
+・MAC副層 : Media Access Control : メディアアクセス制御
+→フレームの構成や衝突検出の仕組み
+
+上記2種の副層における規格やサービスについての標準を規定しているのがこのIEEE802.3と思われる。
+テキスト上、そうとしか思えない。
+
+テキストでは主にツイストペアケーブルの各規格について紹介がある。
+下は　10BASE-T : カテゴリー3 : 10Mbps　から上は 1000BASE-TX : カテゴリー6 : 1000Mbps
+で、4本のうち2本を使うとか、片方を送信、片方を受信に使うとかそういうのが乗ってる。
+
+
+
+以下、動的なネットワーク仮想化を実現する技術
+
+●SDN : Software Defined Networking
+これはあくまで概念。
+ソフトウェアによって柔軟なネットワークを作り上げるという考え方。
+これを実現する技術がOpenFlowと呼ばれるもの。
+これは、ネットワーク機器の制御のためのプロトコル。
+L2,L3スイッチなどが持つ転送機能、経路制御機能を倫理的に分離し、コントローラーと呼ばれるソフトウェアによって、データ転送機能を持つネットワーク機器を集中的に制御、管理する。
+つまり、ネットワーク機器の制御部分をソフトウェア化する。
+
+●NFV : Network Functions Virtualization
+こっちも考え方だ。
+Switch、Router、FW、LB等のネットワーク専用機器ごとに仮想化する考え方。
+専用機器をサーバー上の仮想マシンで動くソフトウェアとして実装する。
+
+・勉強 : オフセット,RTS/CTS,ARP
+
+
+●オフセット
+位置を基準点からの距離で表した値のこと。
+「えっとね～。ここを基準にしてね～。こっちにこれだけズラしたのが今の場所だよ」な位置の表し方のこと
+
+計算機科学において、オフセットは配列または他のデータ構造オブジェクトの中の、所定の要素または位置までの、
+先頭からの距離を示す整数である。
+オブジェクト中のすべての要素が同じ大きさである場合だけ、距離の概念は有効である(典型的にはバイトまたはワードで示される。)。
+
+例：
+abcdef を格納する文字の配列Aがある場合、文字 'c' を含む要素は、Aの先頭からの2のオフセットを持つと表すことができる。
+オフセットがないということは連想配列でその名前のキーがないということ。
+
+
+●ラウンドロビン
+TDMA方式で時間単位で区切るという話を聞いて、ラウンドロビンもそうだったなと思って調べたらそうだった。
+あれは、最初から入ってきたものに、時間単位でCPUを割り振るものだ。
+割り振った時間を超えたら次の奴に。次の奴がその時間内で終わったらさらに次の奴に。
+そうやって均等に仕事をしてもらうやつ。
+
+
+●CSMA/CA方式 : Carrier Sense Multiple Access with Collision Avoidance
+無線LANのアクセス制御
+無線LANは電波を使うので衝突を検知できない。なので回避しようというわけ。
+CDは衝突検出。CAは衝突回避。
+①送信を行う場合、利用したい周波数帯がつかわれていないかを確認後、ランダムな時間だけ待ってから送信を開始する。
+②データを受け取ったノードはACKを応答することでデータを正常に受け取ったことを通知する。
+
+
+●RTS/CTS : Request To Send Clear To Send
+他のノードがデータ送信していることを感知できないために衝突が生じる。それを回避するための方式。
+①ノードはデータを送信する前にRTS(送信リクエスト)をアクセスポイントに送信
+②受信したアクセスポイントはCTS(送信OK)を返信
+③ノードがアクセスポイントからCTSを受信したら通信を開始する。
+④CTSには、他のノードに対する送信抑制時間(多分、この間は送信しないでねって時間か)が記載されていて、衝突を抑制する。
+
+●CSMA/CA with RTS/CTS : Carrier Sense Multiple Access with Collision Avoidance with Request To Send Clear To Send
+長い長い。
+要は、通信始める前はRTS/CTSを使って、通信を始めた後はCSMA/CAで衝突を回避するってやつででしょ。
+どっちも適応して、いいことしましょうってやつ。
+
+HTTPS : Hyper Text Transfer Protocol Secure Socket Layer Transport Layer Security
+こっちも長いけど、それには及ばないか。
+早くここの定義の復習もしたいところだ。
+
+
+●無線LANの動作モード
+①インフラストラクチャーモード
+→よくアンテナみたいなのがお店にぶら下がってるでしょう。そうでなくてもアンテナ立ってる何かそれっぽいものがあるでしょう。　
+要は、あれと通信するモードってこと。ふつうに使うほうね。
+
+②アドホックモード
+→こっちはアンテナみたいなのじゃなくて、直接通信したい奴と通信する奴。
+やったことないけど、まぁ、普通に考えたらできるわな。
+
+
+●FDMA : Frequency Division Multiple Access
+こっちは周波数を分割する方式。さらに細かく周波数を分割することで接続できる端末数を増やすんだって。
+
+●CDMA : Code Division Multiple Access
+こっちは周波数も時間も分割しない。
+符号によって各端末の通信を識別、分離、接続できる
+
+
+データリンク層の主なプロトコル
+データリンクなので第2層。
+
+●ARP : Address Resolution Protocol
+通信相手のIPアドレスからMACアドレスを取得するためのプロトコル。
+①ブロードキャストを利用し、目的IPアドレスを指定したARP要求パケットをLAN全体に流す。
+②各ノードは自分のIPアドレスと比較し、一致したノードだけがARP応答パケットに自分のMACアドレスを入れて返す(ユニキャスト)
+
+ARPの使用イメージがわかない。
+どのときんい使うものなんだ？
+
+
+・勉強 : POP3,IMAP,ISDN,ADSL,ｽﾊﾟﾆﾝｸﾞﾂﾘｰ等
+
+●ISDN,ADSL復習
+Integrated Services Digital Network
+・ほぼ理論値がでて安定するが、料金が高く、通信速度が遅い。
+・なので、大した量は送らないけど、安定が必要な場面ではまだ使われている。
+・2024年にサービス終了。
+
+Asymmetric Digital Subscriber Line：非対称デジタル加入者線
+・上りと下りで速度が違うやつ
+・電話回線を使うやつ
+
+
+●POP3 : Post Office Protocol Ver3
+メールサーバーからメールをダウンロードしてメーラーで見る方式
+
+
+●IMAP : Internet Message Access Protocol
+ネットワーク上にあるメールサーバーをメーラーやソフトで操作する方式
+gmailとかそれ。
+
+
+●スイッチングハブ = ブリッジ
+フレームの蓄積機能、速度変換機能、交換機能を持っている
+
+
+●スパニングツリープロトコル
+ブロードキャストストームを防ぐプロトコル。
+ループ構成の一部を論理的に切断する。
+
+
+●L3スイッチ
+ルーターがソフトウェアで転送処理をするのに対し、こちらは専用のハードウェアで行う。
+専用なので高速に処理が行えるので、大容量のファイルを扱うファイルサーバーへのアクセス等に適している。
+
+
+●TDMA方式 : Time Division Multiple Access : 時間割多重アクセス
+・ネットワークを利用できる時間を細かく区切り、割り当てられた時間は各ノードが独占する方式。
+・コネクション型の通信(TCP的)なので、相手との通信路を確立してから通信する。
+
+
+●TDM
+TeamDeathMatchではない。Time Division Multipleだ。
+これにAccessをつければ上のようにTDMを用いたアクセス制御になる。
+ネットワーク上に送信する時間を割り当て(タイムスロット)、タイムスロットごとに異なるデータを伝送することで多重化を図る。
+
+
+●CSMA/CA方式 : Carrier Sense Multiple Access with Collision Avoidance
+CSMA/CDがイーサネットね。こっちは無線。
+CDは衝突検出。CAは衝突回避。
+無線LANは電波を使うので衝突を検知できない。なので回避しようというわけ。
+ここはまた明日かな。
+
+
+・勉強 : メディアアクセス制御
+
+
+メディアアクセス制御とは衝突を回避するための制御のことである。
+そのうち今日は二つを取り上げる。
+ちなみにメディアアクセス制御は英語で書くとMedia Access ControlになるのでMACとなる。
+
+
+・CSMA/CD方式 : Carrier Sense Multiple Access with Collision Detection
+搬送波感知多重アクセス/衝突検出
+各ノードは伝送媒体が使用中かどうかを調べて使用中でなければデーターを送信する複数のノードが同時に通信を開始するとデータの衝突が起きるその衝突を検知し一定時間また後で再送する一定以上の距離のケーブルでは衝突が検知できない。
+
+・トークンパッシブ方式
+ネットワーク上をフリートークンと呼ばれる送信県のためのパケットが巡回する。
+フリートークンを獲得したノートの日が送信を行うので衝突を回避できる。
+
+
+30%程度までは csmacd 方式の方が早いけど、それを超えた場合はトークンパッシング方式の方が緩やか。
+csmacd 方式の方は急に遅延時間が伸びる。
+一長一短のように感じるけど今はどちらの方式の方が使われているのだろうか。
+
+理論はわかるよ送ってないか調べて送ってないから送る相手も同じことをするだから衝突が起こったら怒ったり仕方がないからとりあえずランダムな時間待ってまた送信してみるっていうのとではトークンをぐるぐる走らせて送りたい奴がいたらそのトークンをゲットしてそいつだけが送ることができるって言うのはとりあえずぐるぐる回すっていうその方式ね。
+確かにそうすればそうしにことは書かないけど本当の対処法は受信と送信の日本を持って送っていうことなんじゃないかなそういうわけではないのか。
+
+
+拡張ヘッダを利用することで実現できるセキュリティ機能
+→暗号化機能
+
+重要なのは、暗号化、認証。
+
+IPSecは暗号化、認証、改ざん検出。
+
+・ICMPv6
+・RA : Router Advertisement
+→IPアドレスの自動設定
+
+
+・勉強 : IP,IPv4,ｻﾌﾞﾈｯﾄﾏｽｸ,IPv6
+・勉強 : IPv6
+
+が並んだときは1回だけ :: で省略していい。
+それ以外は :0:0見たいになる。
+
+2001:0A23:0000:0000:90CD:00EF:0000:0000
+①各区間先頭の[0]は省略できる。0000→0
+②全て[0]の区間が2個以上続く場合、一か所のみ : : で表すことができる。
+→
+2001:A23::90CD:EF:0:0
+
+後は、拡張ヘッダーで認証とかできるって話だった。
+ここは不正解だったので、再確認したいところ。
+
+
+ここからは新知識
+IPv4のネットワークアドレス部はプレフィックス
+ホストアドレス部はインターフェースIDと呼ぶらしい。
+
+2001:db8:100:1000::/56
+先頭56bitがプレフィックス
+
+2の128乗
+アドレス空間 : 340澗は、340兆の1兆倍の1兆倍。
+
+
+128bitなので16bitごとに:で区切る。
+1111 = 15 = F
+1111_1111_1111_1111 = 16bit = FFFF
+
+
+出のための値。
+
+●IPアドレス
+インターネットに直接接続する場合には ISP に申請し IP アドレスを取得する。
+だから間に ISP を挟まないとインターネットができないというわけだ。
+IP アドレスなしじゃネットワーク上に自分がどこにいるのかわからないからな。
+
+・ネットワークアドレス部
+その端末がどのネットワークに属するのか
+・ホストアドレス部
+属しているネットワークのどの端末なのか
+
+パケット通信技術である
+コネクションレス型通信である
+IP アドレスを使った経路制御を行う
+ルーティング
+ルーターは宛先 IP アドレスがネットワーク外である場合宛先により近いルーターへ転送を繰り返すことでバケットを目的地に到達させる
+
+IP アドレスクラス
+クラス A先頭ビット0
+ネットワークアドレス8ビット
+ホストアドレス24ビット
+同一ネットワーク内 IP アドレス数16777214
+
+クラス B 先頭ビット10
+ネットワークアドレス16ビット
+ホストアドレス16ビット
+同一ネットワーク内 IP アドレス65534
+
+クラス C先頭ビット110
+ネットワークアドレス24ビット
+ホストアドレス8ビット
+同一ネットワーク内 IP アドレス254
+
+クラス d 先頭ビット1110
+クラス d は IP マルチキャスト用に予約された特別のアドレスでありネットワークアドレスとホストアドレス部に分割されない。
+
+ネットワークアドレス
+ホストアドレスが全て0のアドレスはネットワーク自体を指す
+ブロードキャストアドレス
+ホストアドレスが全て1のアドレスはネットワーク内のすべてのノード宛てを示す
+
+だから例えばクラス C だと8ビットのホストアドレス部は256使えるはずだがネットワークアドレスとブロードキャストアドレスの分使えないので2引いて254になる
+
+127.0.0.1は自分自身を表す IP アドレスでループバックアドレスと言う
+
+インターネットに接続されたノートに一意に割り当てられた IP アドレスをグローバル IP アドレスと言い、組織内のみで適応する IP アドレスをプライベート IP アドレスという
+
+クラス A 10.0.0.0から10.255.255.255
+クラス B 172.16.0.0から172.31.255.255
+クラス C 192.168.0.0から192.168 255.255
+
+グローバル IP アドレスの判断
+例えば IP アドレスが208点77点188点66の場合、先頭8ビットが11010000なのでクラスC に該当するがプライベート IP アドレスの範囲ではないのでグローバル IP アドレスだと判断できる
+クラス C の先頭ビットは110。
+
+通信の種類
+ユニキャスト、単一の送信先を指定して行う通信
+ブロードキャスト、ネットワークに属しているノード全体に対して行う通信
+マルチキャスト、指定した複数の送信先に対して同一データを送る通信
+マルチキャストグループ管理用のプロトコル2 igmp 、Internet Group Management protocol がある。
+
+cidr : classless inter domain routing
+クラスによってネットワークアドレスとホストアドレス部を分割する従来の方法は結果的に割り当てられたものの利用されない IP アドレスを多く発生させてしまった。そこで IP アドレスの効率的な運用を促進するために考えられたのがサブネットマスクを使った cidr。
+
+スーパーネット化
+連続するネットワークを束ねて一つの集約したネットワークを作成すること。
+
+IP V6
+アドレス空間が32ビットから128ビットに拡張。
+ルーティングに不要なフィールドを拡張ヘッダーに分離することで基本ヘッダーを簡素且つ固定長にしルーターなどの負荷を軽減。
+IP レベルのセキュリティ機能 ipsec に標準対応。
+IP アドレスの自動設定機能の組み込み。
+特定グループの家経路上最も近い濃度あるいは最適なノートにデータを転送するエニーキャストの追加。
+
+ipv 6のアドレス表記。
+
+
+ipv 6のアドレス
+
+IP header
+
+
+アドレス変換技術
+NAT : NETWORK address translation
+グローバル IP アドレスとプライベート IP アドレスを一対一で相互に変換する
+NAPT : NETWORK address PORT translation
+IP マスカレード。
+プライベート IP アドレスをグローバル IP アドレスに変換すると同時に TCP udp ポート番号を別の番号に書き換えることにより一つのグローバル IP アドレスでプライベート IP アドレスを持つ複数のノードが同時にインターネットに接続できる
+
+icmp Internet Control Message protocol
+IP パケット送信処理におけるエラーの通知や制御メッセージを転送するためのプロトコル
+エコー応答到達不能経路変更要求エコー要求時間超過
+いわゆる PING コマンド。
+
+
 
 
 ●TCP/IPの通信
