--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -21,6 +21,19 @@
 ・Aggregation : 集約
 
 
+●redundancy : 冗長性
+コンピュータシステムにおいては、耐障害性を高めるためにネットワークを含むシステム全体を二重化して予備システムを準備することを冗長化といい、
+冗長化によって信頼性、安全性を確保した状態を冗長性があるという。
+
+
+
+●expansion : 拡張
+
+●QED : Quod Erat Demonstrandum : かく示された
+
+
+●ALL WILL BE ONE
+New phyrexia
 
 ●Delete,Erase,Remove,Eliminate
 
