--- a/SQL/基本.md
+++ b/SQL/基本.md
@@ -24,6 +24,9 @@ INSERT INTO syain1 ( id, name ) SELECT id, name FROM syain2
 
 <https://qiita.com/ryota_i/items/d17c7630bacb36d26864>  
 
+特定テーブルにおける、条件に当てはまるレコードの特定のカラムの値を任意の値に書き換える。  
+日本語に直して予約語さえ覚えてしまえば、なんてことはないな。  
+
 ```sql
 -- ●基本
 UPDATE テーブル名
