--- a/BasicInformation/午後/令和元年秋期.md
+++ b/BasicInformation/午後/令和元年秋期.md
@@ -29,8 +29,106 @@
 応用の時はこれを把握できていなかったので落ちた感じだな。
 プログラミングまではいい。ただ、配列とか絡み出すとダメかも。
 なので、アルゴリズムを解くなら、最初に簡単な問題を解いて余った残り時間でやるのがベストかもなぁ。
-ちょっと厳しい。
-これがわかっただけでも儲けものだ。
+ちょっと厳しい。これがわかっただけでも儲けものだ。
+
+gはポカミス。逆から考えないといけない事を忘れていた。
+逆にどうやったら気が付くことが出来た？
+
+hは言語仕様の認識ミス。
+それさえわかれば普通にインクリメントされる事はわかる。
+
+
+iはIndexが何を返すのかわからなかったのでトレースの使用もなかった。
+誤って Pat[] に"AC[B[AB]AC]A"を格納して関数 GenerateBitMaskRegex を呼び出した場合，Mask[1]はiとなる。
+→
+Aの観測結果がどうなってしまうのかトレースせよって言ってる。
+
+Index(Pat[i])が何を返すのかわからなかった。  
+→
+関数 Index は，引数にアルファベット順でn番目の英大文字を設定して呼び出すと，整数n(1≦n≦26)を返す。
+アルファベットを数値に変換した物。
+A→1
+B→2
+・・・
+Z→26
+
+こういう関数の説明は頭の片隅に記憶しておかないとトレースの仕様がないよなー。
+→
+背景色を変更できるのを発見したので次から重要な文章には容赦なくチェックを入れる。
+
+
+Maskは各文字の出現位置をビットで表現するための配列。
+
+
+以上をわかったうえでトレースしてみると？
+
+OriginalPatLen = 12
+PatLen = 0
+Mode = 0
+
+// 1文字目 A
+PatLen = 1
+Mask[Index(Pat[1])] = Mask[Index("A")] = Mask[1]
+Mask[1] = 0B;
+1Bを(1-1)ビットだけ左シフトした値→1B つまりシフトしてないって事だからね。
+Mask[1] = 1B
+
+// 2文字目 C
+PatLen = 2
+
+// 3文字目 [
+PatLen = 3
+Mode = 1
+
+// 4文字目 B
+Modeが0でないとPatLenはカウントされないのでスルー
+
+// 5文字目 [
+PatLen = 4
+Mode = 1
+
+// 6文字目 A
+Masi[1]の値 : 1B
+1Bを(4-1)ビットだけ左シフト→1000B
+シフト演算は新しく出現するものに関しては0から始まる。
+Mask[1] = 1000Bと1Bの論理和→1001B
+
+// 7文字目 B
+
+// 8文字目 ]
+Mode = 0
+
+// 9文字目 A
+PatLen = 5
+Mask[1]の値 : 1001B
+1Bを(5-1)ビットだけ左シフト→10000B
+Mask[1] = 10000Bと1001Bとの論理和→11001B
+
+// 10文字目C
+PatLen = 6
+
+// 11文字目 ]
+Mode = 0
+
+// 12文字目 A
+PatLen = 7
+Mask[1]の値 : 11001B
+1Bを(7-1)ビットだけ左シフト→1000000B
+Mask[1] = 1000000Bと11001Bとの論理和→1011001B
+
+全部をトレースするのではなく、必要な奴だけ考える。
+
+なぜトレースできそうにないと思ったのか。
+そもそもどういう出力がされるのかイメージできなかった。
+Mask[Index(Pat[i])]が何を指すのかイメージできなかった。
+疑似言語を理解していなかった。
+
+午後問題はわざわざプログラムとして書き起こすまではしなくていいかも。
+机上で十分トレースできる。
+
+
+[令和元年（R01）秋期 基本情報技術者試験 アルゴリズム問題 解き方解説](https://daeudaeu.com/fe_algorithm_r01f/)  
+・（特に穴埋め問題以外は）プログラムの全体像・全容を理解する必要はない  
 
 ---
 
