--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -21,11 +21,7 @@
 ・Aggregation : 集約
 
 
-●redundancy : 冗長性
-コンピュータシステムにおいては、耐障害性を高めるためにネットワークを含むシステム全体を二重化して予備システムを準備することを冗長化といい、
-冗長化によって信頼性、安全性を確保した状態を冗長性があるという。
-
-
+・Probider : 供給者
 
 ●expansion : 拡張
 
@@ -34,6 +30,24 @@
 
 ●ALL WILL BE ONE
 New phyrexia
+
+
+●redundancy : 冗長性
+コンピュータシステムにおいては、耐障害性を高めるためにネットワークを含むシステム全体を二重化して予備システムを準備することを冗長化といい、
+冗長化によって信頼性、安全性を確保した状態を冗長性があるという。
+
+
+●snippet : 切れ端、断片
+
+簡単に切り貼りして再利用できる部分のこと。
+検索エンジンによる検索結果の一部として表示される、Webページの要約文のこと。
+
+プログラムを作成する際には、しばしば、頻繁に利用する同じ記述の繰り返しや、微妙な変更を加えるだけで使うことができそうなパターンに遭遇する。
+そのようなパターンをスニペットとして登録しておくと、一塊のコードを呼び出して貼り付けることで簡単に記述できるようになる。
+
+一部の開発環境おいては、スニペットに名前を付けたり、カテゴリ分類を行ったりすることで、スニペットを簡単に呼び出して簡単に貼り付けられるようになっている。
+例えば、Microsoftが提供している統合開発環境（IDE）のVisual Studioでは、C++やC#のコードをスニペットとして利用できる機能が附属している。
+
 
 ●Delete,Erase,Remove,Eliminate
 
