仕事で気になったものすべて

--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -49,6 +49,11 @@ New phyrexia
 例えば、Microsoftが提供している統合開発環境（IDE）のVisual Studioでは、C++やC#のコードをスニペットとして利用できる機能が附属している。
 
 
+・interaction : 相互作用
+<https://ferret-plus.com/words/929>
+インタラクションとは英語の「 inter（相互に）」と「action（作用）」を合成したもので、その基本は「人間が何かアクション(操作や行動)をした時、そのアクションが一方通行にならず、相手側のシステムなり機器がそのアクションに対応したリアクションをする」  
+
+
 ●Delete,Erase,Remove,Eliminate
 
 ・delete
