--- a/BasicInformation/午後/平成31年春期.md
+++ b/BasicInformation/午後/平成31年春期.md
@@ -238,11 +238,32 @@ WebAPIの説明を見ると、検査結果管理サーバには、検査IDを用
 これは案外わかった。  
 検査結果情報から逆算して考えられる構成になっていたので、最初に結果を10件取得して、それぞれのレコードの検査農産物とその農産物を依頼した申込者情報という風にたどっていけばいいだろうと考えたらその通りだった。
 
---
+---
 
 ## アルゴリズム
 
---
+多分35分 【成績】全6問中 6問 回答/6問 正解　正解率:100.0%  
+
+なぜか全問正解。  
+うれしいが、確信を持って答えたわけではなく、結構当てずっぽうなところもあったので、うれしくない。  
+やっぱり日本語の解読が難しい。  
+配列中で値が格納されている最後の要素の次の要素に格納する。  
+牛の洗濯は不死の値の小さい順に行い、同じ値を持つ節が2つ以上ある場合は、配列の先頭に近い要素に値が格納されている節を選択する。  
+○○の要素の次の要素ってところで頭がバグる。プログラムで書いてコメント書いて。  
+
+解説も読んでみたけど、最初の問題は絵を見て察して、2つ目は確信を持って答えられて、最後の問題は当てずっぽうって感じですね。  
+つまり、100点はまぐれって事です。わかってたけど、こんな感じじゃダメだろうな。  
+絵を見てわかるならそれで十分だ。
+日本語読むより楽だからね。  
+むしろ全部、絵をシミュレートして説明して欲しい位なんですけど。  
+
+この問題をやって改めて何が嫌かわかった。  
+日本語の解読だ。  
+日本語からプログラムや処理をイメージ出来ないのが問題なんだ。  
+他の問題はストーリー仕立てになっていてとっつきやすいし、要素がどうのこうのなんて言わないからわかりやすい。
+日本語を読みこんで、本当にその通りの表現になっていることを確認するところからやるのがいいかもしれないな。
+
+---
 
 ## Java
 
