--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -33,5 +33,6 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・基本的なWPFプログラムを一通り理解したい。
 ・SSH鍵の生成方法
 ・CI/DIツールの導入方法
+・
 
-
+逆引きの勉強がいい感じ。
