--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -36,6 +36,18 @@
 ・odd : 奇数  
 
 
+●インテントとインデント
+
+・インデント :
+文章の行頭に空白を挿入して先頭の文字を右に押しやること。字下げ。
+
+・インテント :
+意図、目的、真意、集中している、没頭している、決意している、などの意味を持つ英単語。
+Android開発環境の異なるアプリケーションのコード間で実行時バインディングを実行する機能を提供するメッセージングオブジェクトです。
+
+
+
+
 ●ALL WILL BE ONE
 New phyrexia
 
