会社のやつ

--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -28,11 +28,27 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 
 
 〆・特定行から特定行までの文字列を置換するサンプル作りたい・・・。
-
+〆・Laravelのプロジェクト作って適当に実行するまでの流れをまとめたい。
+〆・Collectionを持つパッケージは何なのか調べたい。
 
 ・基本的なWPFプログラムを一通り理解したい。
 ・SSH鍵の生成方法
 ・CI/DIツールの導入方法
-・
+・幅いっぱいのやつと中央のやつの違い
+
 
 逆引きの勉強がいい感じ。
+
+
+フロントの何に時間がかかるのか。
+・毎回のデバッグ
+・バインド
+・項目の制御
+・スキル不足
+
+
+・時間があるときに、予約入力からチェックアウトまで流して、データがどうなるか観察してみればいい。
+人に頼らず、自分で学ぶとはそういうことだぞ。
+
+
+
