--- a/BasicInformation/午後/平成31年春期.md
+++ b/BasicInformation/午後/平成31年春期.md
@@ -253,15 +253,71 @@ WebAPIの説明を見ると、検査結果管理サーバには、検査IDを用
 
 解説も読んでみたけど、最初の問題は絵を見て察して、2つ目は確信を持って答えられて、最後の問題は当てずっぽうって感じですね。  
 つまり、100点はまぐれって事です。わかってたけど、こんな感じじゃダメだろうな。  
-絵を見てわかるならそれで十分だ。
+絵を見てわかるならそれで十分だ。  
 日本語読むより楽だからね。  
 むしろ全部、絵をシミュレートして説明して欲しい位なんですけど。  
 
 この問題をやって改めて何が嫌かわかった。  
 日本語の解読だ。  
 日本語からプログラムや処理をイメージ出来ないのが問題なんだ。  
-他の問題はストーリー仕立てになっていてとっつきやすいし、要素がどうのこうのなんて言わないからわかりやすい。
-日本語を読みこんで、本当にその通りの表現になっていることを確認するところからやるのがいいかもしれないな。
+他の問題はストーリー仕立てになっていてとっつきやすいし、要素がどうのこうのなんて言わないからわかりやすい。  
+日本語を読みこんで、本当にその通りの表現になっていることを確認するところからやるのがいいかもしれないな。  
+てか、応用の時も、何で撃沈したかと言えば、てんぱって日本語読めなくなって、何言ってるか全然わからなくなってしまったことなので、  
+自分が理解できるスピードを把握するところから始める必要があるなと感じる。
+
+文字の出現回数表に基づいて、各文字に対応する葉の値を、配列の先頭の要素から順に格納する。  
+→  
+ここ、ABCDをそのままなのか、出現頻度順にソートして格納するのかわからない。  
+そうでなくても、そのまま突っ込んでいいのか不安に感じる。  
+
+親が作成されていない節を二つ選択し，選択した順に左側の子，右側の子とする親の節を一つ作成する。この節の値を，配列中で値が格納されている最後の要素の次の要素に格納する。節の選択は節の値の小さい順に行い，同じ値をもつ節が二つ以上ある場合は，配列の先頭に近い要素に値が格納されている節を選択する。  
+→  
+さすがに絵と照らし合わせてみれば、何とかわかるけど所見では結構きつい。  
+言ってる内容が後になってわかるタイプは単純なトレースといかない。  
+言っている事を絵にかいて、そのイメージが解説と同じレベルかどうかが判断基準になるだろうか。  
+少なくとも、頭の中で考え続けるよりは、ごちゃごちゃ言いながら絵を書いたほうがいいかもしれない。  
+「節の選択は節の値の小さい順に行い」この下りは完全にイメージできていないと辛い。  
+いや待てよ、自分の場合どう考えた？理解出来ないからそもそも考えていないような？。  
+プログラムより仕様。  
+仕様をわかっていなければ、作れるものも作れない。それは仕事だけに限らず、これも同じだろうに。  
+あー例文を言葉通りにやれば同じになるから、この問題はコツの章でもあったように、例題をトレースする事で解決していくパターンのやつかな。  
+
+四つの1次元配列 parent，left，right 及び freq の同じ要素番号に対応する要素の組み(以下，要素組という)によって，  
+→  
+要素組という文言はここで言っていたのか。最後の問題で平然と言っていたのにイライラしてたけどちゃんと書いてあった。  
+むしろ、ちゃんと読めていない、もしくは認識できていない自分が悪かったということか。  
+いや、間違える地点で俺が悪いのは確定なんだ  
+焦りすぎというか、よくわからないで先に進めるからどんどん取り返しが付かなくなる気がする。  
+戻って確認するよりも、しっかり確認して戻らないようにしたほうがいい気がするな。  
+
+
+<https://studying.jp/kihonjoho/about-more/kiji-9.html>  
+また、午後試験ではITに関する知識以外にも日本語の理解力が求められます。問題の内容を誤解して、見当違いの答えを書いてしまう受験者も多いようです。日本語力を養うためにも、午後試験の過去問題に触れておくことをおすすめします。  
+→  
+やっぱりそうなんですねー。自分だけじゃないのか。  
+読解力だよなー。  
+
+
+副プログラム SortNode は，親が作成されていない節を抽出し，節の値の昇順に整列し，節を表す要素組の要素番号を順に配列 node に格納し，その個数を変数 nsize に格納する。行番号19～24で親が作成されていない節を表す要素組の要素番号を抽出し，行番号25で節の値の昇順に整列する。
+→  
+これが全くわからない。解説を読んでもわからない。  
+ノードの値の昇順に整列って結果は何になるんだ？  
+そこが全然イメージできない。  
+でも、ここは問題の本質と関係ないというか、ここがわからなくても解けるようにはなっている。  
+事実、そうだからこそ100点だったわけで、これがソートした後の配列はどうなっているか？って問題だったら死んでる。  
+理解出来なくても全体を把握する能力も必要かもしれない。  
+ここまで読みこんでも理解出来ないし、逆にここまで読みこまないと理解出来ないので、中々苦しいところである。  
+数こなして慣れるしかないのはわかっているけど、そんなスタンスでどこまでいけるだろうか。  
+
+
+読みこんだ。ここまで読みこめばさすがにわかるって感覚はつかんだ。  
+今度は、これくらい読みこんで時間がどうなるのか図ってみることにしよう。  
+さすがにこの問題は飽きた。  
+新しい刺激も与えないといけない。  
+配列がどうのこうのよりも、日本語が難しい。  
+でも配列が入れ子になり始めても難しい。  
+そんな時は具体例を入れて考えないといけない。  
+その時も落ち着いて、考える必要があると感じた。  
 
 ---
 
