9月21日会社分

--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -35,7 +35,10 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・SSH鍵の生成方法
 ・CI/DIツールの導入方法
 ・幅いっぱいのやつと中央のやつの違い
-
+・php foreachのエラーのあれ
+・whereの動作
+・なぜwhere inは重いのか
+・sql インデックス 仕組み
 
 逆引きの勉強がいい感じ。
 
@@ -50,5 +53,8 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・時間があるときに、予約入力からチェックアウトまで流して、データがどうなるか観察してみればいい。
 人に頼らず、自分で学ぶとはそういうことだぞ。
 
+Warning: Invalid argument supplied for foreach() とでたら。。。
+invalid argument supplied for foreach()
+PHP Warning:  foreach() argument must be of type array|object, null given in /workspace/Main.php on line 4
 
-
+<https://nasunoblog.blogspot.com/2013/10/sql-server-column-edit-error.html>
