--- a/BasicInformation/午後/平成30年秋期.md
+++ b/BasicInformation/午後/平成30年秋期.md
@@ -41,6 +41,39 @@
 
 ## アルゴリズム
 
+1時間 【成績】全7問中 7問 回答/2問 正解　正解率:28.6%  
+
+がっつり読み込んだからと行って、正解するわけではないって事。  
+この問題はプログラムのトレースが重要だった。  
+しかし、うまくトレースすることが出来なかった。  
+頭で考えてばかりで手を動かさなかったから。  
+動かしても途中で面倒くさいくなって当てずっぽうになった。  
+やりたいことがわかったなら、すぐにトレースに映るべきだろう。  
+
+今回は日本語は読めたがトレースが甘かった。  
+解読とトレースが勝負だと見た。  
+
 ---
 
 ## Java
+
+30分 【成績】全6問中 6問 回答/5問 正解　正解率:83.3%  
+
+今回は簡単だった。  
+1つだけわからない奴があったけど、それ以外は普通にわかった。  
+前半に説明が永遠と続くタイプの問題だった。  
+この手の問題は問題を読むだけで時間がかかるので焦ってしまうが、逆に言えば前半部分に答えが詰まっているので、  
+ちょっと時間か買っても仕方がないものとして、しっかり読みこめば、結構出来たりする。  
+それをわかっていると焦らずに済むので、過去問をやる意味はここにあると思った。  
+
+interfaceの実装文言が地味に怪しかったので確認する。  
+
+### implements
+
+javaのインターフェース実装命令。  
+C#もこれだったか？  
+違う。C#は「:」で済むんだった。であれば継承は?  
+継承も「:」か。  
+概念は知っているが、あまり使わないからパッと出てこないな。  
+
+extendsがjavaに置ける継承だ。  
