--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -26,11 +26,6 @@ https://www.geekpage.jp/blog/?id=2017-2-23-1
 https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 
 
-
-〆・特定行から特定行までの文字列を置換するサンプル作りたい・・・。
-〆・Laravelのプロジェクト作って適当に実行するまでの流れをまとめたい。
-〆・Collectionを持つパッケージは何なのか調べたい。
-
 ・基本的なWPFプログラムを一通り理解したい。
 ・SSH鍵の生成方法
 ・CI/DIツールの導入方法
@@ -58,3 +53,66 @@ invalid argument supplied for foreach()
 PHP Warning:  foreach() argument must be of type array|object, null given in /workspace/Main.php on line 4
 
 <https://nasunoblog.blogspot.com/2013/10/sql-server-column-edit-error.html>
+
+・abstractを実装したクラスの動きとは？参照はどうなる？
+
+
+
+アクティビティ図
+UML版フローチャート。
+イベントとイベントの制御  
+
+シーケンス図
+オブジェクト、相互作用、時系列
+
+人に教えるつもりで頭の中で反芻する事。
+簡単そうに見えても、教えようとなると、結構な労力が必要になることがわかった。
+
+
+
+・配列の入れ子はやっぱりきついかも。
+　沿え時の意味と、配列の意味がわからないと混乱する。
+→
+日本語の解読と実際に値を入れてみるトレース作業がうまく行けば何とかなる。
+後は運だ。
+
+・疲れたら午前を進めてもいい。
+1つ1つ、人に教える感じで覚える。
+
+
+アルゴリズムの問題やるの怖くなってきた。
+ここまでやってできなかった時が怖い。落ち込む。
+まだまだ運任せなところあるからな。
+→
+やっぱりまだまだダメですね。
+
+・午前問題の抜けている問題をやっておきたい。
+
+・インデクサーまとめ
+
+・エバノの勉強記事をtilに映す
+
+・memoだと何のメモだかわからないのでちゃんと名前を付ける。
+後でまとめる用のメモも作って、そうじゃない奴はちゃんと名前を付ける。
+
+---
+
+## 終わったやつら
+
+〆・特定行から特定行までの文字列を置換するサンプル作りたい・・・。  
+〆・Laravelのプロジェクト作って適当に実行するまでの流れをまとめたい。  
+〆・Collectionを持つパッケージは何なのか調べたい。  
+〆・わかりそうで、アクティブディレクトリーまとめ  
+〆・Laravel簡単まとめ  
+〆・ヒープソート片付ける  
+・コツを再び読んで日本語の確認をする  
+
+〆・LaravelのVender機能だけをダウンロードするやり方  
+職場では使えなかった。Venderフォルダがなかったので、gitIgnoreされててgitに上がっていない可能性あり。  
+まぁ、量が半端ないしね。  
+Venderだけをダウンロートする事はできるのだろうか。  
+
+〆・リモートブランチを取得する方法を再まとめ  
+結局リンクをたどらないとわからないって事はまとめ方がヘタって事だからね。  
+
+〆・phpアンパックを配列関係にまとめる。  
