--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -25,8 +25,6 @@
 
 ・expansion : 拡張
 
-・QED : Quod Erat Demonstrandum : かく示された
-
 ・immutable
 イミュータブル。作成後にその状態を変えることのできないオブジェクトのことである。
 ・mutable
@@ -35,21 +33,23 @@
 ・even : 偶数  
 ・odd : 奇数  
 
+・Directory : 住所録  
 
-●インテントとインデント
+・indent
+インデント。  
+文章の行頭に空白を挿入して先頭の文字を右に押しやること。字下げ。  
 
-・インデント :
-文章の行頭に空白を挿入して先頭の文字を右に押しやること。字下げ。
-
-・インテント :
+・intent
+インテント
 意図、目的、真意、集中している、没頭している、決意している、などの意味を持つ英単語。
 Android開発環境の異なるアプリケーションのコード間で実行時バインディングを実行する機能を提供するメッセージングオブジェクトです。
 
 
+・implement : 実装
 
+・inheritance : 継承
 
-●ALL WILL BE ONE
-New phyrexia
+・extend : 拡張
 
 
 ●redundancy : 冗長性
@@ -108,3 +108,11 @@ New phyrexia
 
 物やデータをどける的なニュアンスを感じる。
 
+---
+
+## 趣味
+
+・QED : Quod Erat Demonstrandum : かく示された
+
+●ALL WILL BE ONE
+New phyrexia
