--- a/PHP/配列関係.md
+++ b/PHP/配列関係.md
@@ -167,6 +167,46 @@ print_r($plan_params);
 
 ---
 
+## 4つの連想配列を4つの引き数を取る関数に渡したい(連想配列を分解せずに関数に渡して、渡した先で分解されてほしい)
+
+<https://stackoverflow.com/questions/40663687/cannot-unpack-array-with-string-keys>  
+[...]キーワードによる引数のアンパックなる仕組みを使う事で実現できる。  
+
+GORAの開発中、idを4つの要素に分解して連想配列にしたとき、連想配列を分解しないで関数に渡す方法はないか調べた結果である。  
+関数として4つも戻り値があるのはどうかという話もあったので連想配列にして1つとして返したってわけ。  
+
+``` PHP
+// 4つの引き数を受け取る関数
+function getOpenPlanPrice($golf_code, $plan_code, $open_plan_code, $seq) {
+    var_dump($golf_code);
+    var_dump($plan_code);
+    var_dump($open_plan_code);
+    var_dump($seq);
+}
+// 4つの連想配列を返す関数
+function rebateMainKeyFromLinkagePlanID($linkage_plan_id) {
+    return [
+        'golf_code' => (int)substr($linkage_plan_id, 0, 4),
+        'plan_code' => (int)substr($linkage_plan_id, 4, 6),
+        'open_plan_code' => (int)substr($linkage_plan_id, 10, 6),
+        'seq' => (int)substr($linkage_plan_id, -4)
+    ];
+}
+$linkage_plan_id = '05539999950000020005';
+
+// [...]キーワードを引数の先頭に付ける
+getOpenPlanPrice(...rebateMainKeyFromLinkagePlanID($linkage_plan_id));
+// Ver7.0まではarray_valuesを挟む必要がある模様。
+getOpenPlanPrice(...array_values(rebateMainKeyFromLinkagePlanID($linkage_plan_id)));
+// call_user_func_arrayを使ってもいけるが、関数名を文字列指定するのは嫌だし、長いので使うことはないだろう。
+// call_user_func_array(
+//     'getOpenPlanPrice',
+//     rebateMainKeyFromLinkagePlanID($linkage_plan_id)
+// );
+```
+
+---
+
 ## array_null
 
 後でちゃんとまとめる。  
