--- a/BasicInformation/午後/平成30年秋期.md
+++ b/BasicInformation/午後/平成30年秋期.md
@@ -29,13 +29,103 @@
 
 ## ネットワーク
 
+15分 【成績】全5問中 5問 回答/5問 正解　正解率:100.0%  
+
+クラスA,B,C,Dを度忘れしたので、復習したい。  
+ネットワークを諦めるためにやってみたのだが、15分で全問正解って・・・。  
+諦めるに諦めきれないではないか。  
+
+唯一可用性に関してまとめて終わりかな。  
+
+d,e
+正しい。構成案1では、一方のルータに障害が発生したときは、もう一方のルータが使用されるような構成になっているため可用性が向上します。一方、構成案2はルータB又はルータCのいずれかがダウンすると通信障害になってしまいます。
+
+可用性 : システムが停止することなく稼働し続ける能力  
+これが一番しっくり来るかな。  
+可用性って言葉の意味が広すぎてあれなんだよね。
+
+
 ---
 
 ## データベース
 
+21分 【成績】全4問中 4問 回答/2問 正解　正解率:50.0%  
+
+見直しもして完璧と思ったんだが・・・。  
+こういうのがあるからデータベースは怖い。  
+ちゃんと復習しましょう。  
+しかし、今回の問題は実にデータベースらしい問題だなと思いました。  
+
+■ a 不正解  
+
+検査制約か参照成約で迷った。  
+正直、検査制約がなんなのかわからなかったので、一番それっぽい参照成約を選んだら間違えた問題です。  
+基礎が出来てないってこういうこというんだよな。  
+
+検査制約は、列に格納できるデータの値や範囲に制限を加える制約です。その列の入力値が条件を満たしているかどうかがチェックされます。  
+本問では、"決済"表に入力される"決済額"の値は、"販売"表の当該販売IDの"決済額"の値と一致していなければならないので、値の一致を強制するために"決済"表の"決済額"列に検査制約を設定します。  
+→  
+なるほどね。値の一致を強制するから検査が必要ってことね。  
+問題を解いている時は、-1を入れたりするんだから何を検査するんだって思ってたけど、言われてみればそうだわな。  
+
+参照制約は、"参照元の列に格納される値は参照先の列に存在する値でなければならない"という制限を課す制約です。参照制約は、外部キー制約とも呼ばれ、外部キーを設定すると参照制約が付されます。  
+図1の表構成では、"販売"表の"席種"列が"商品詳細"表の"席種"列を参照しているので、外部キー（参照元）となる"販売"表の"席種"列に参照制約を設定することになります。  
+あー、概要はわかってたけど、参照元か参照先は意識してなかったな。  
+参照元に対して設定する制約で、商品詳細表は販売表に取っては参照先だから、商品詳細表には参照成約はつかず、参照元である販売表の方につくって事ね。  
+
+■ b 不正解  
+
+販売できない席数とは、購入申込み席数のうち、決済済みの席数と未決済（決済期限到来前）の席数を足した数です  
+まずここの定義から確認すべきだったな。  
+キャンセルは含まれていない。だから-1は考えないって事。  
+問題はそれがどこかに書いてあるかって事だ。  
+それっぽい文面は見当たらなかったので、設問2についてのスレを見てみる。  
+
+``` txt
+  (3):会員が支払手続を行うと，決済処理として販売サブシステムは販売IDを主キーとするレコードを決済表に追加する。ここで，決済日はレコードを追加した日とする。
+  (4):販売サブシステムは決済期限日の翌日に，決済期限日を過ぎた販売表中のレコードと販売IDが同じレコードが決済表にない場合，その購入申込みは取り消されたものとして，バッチ処理によって決済表に当該販売IDを主キーとするレコードを追加する。このレコードの決済日はNULLで，決済額は－1とする。
+引用終わり
+
+この二つの説明から、決済済みの席とは、決済表に販売表の販売IDと同じ販売IDがあり、また決済額が-1ではないかつ決済日がNULではないレコードのことを指します。
+また、未決済の席とは、販売表の販売IDと同じIDが決済表に存在しない（決済日と決済額がNULLになっている）レコードのことを指します。
+
+上記に当てはまるレコードの数を数えれば会員が購入を申し込んだ（販売できない）席数が出るはずです。
+
+さらに、図１を参照すれば商品詳細表からコンサートごとの発売席数を持ってこれることが分かります。
+この発売席数が販売可能な席数になります。
+あとは単純に販売可能な席数－販売できない席数＜０となった時に販売終了と表示されるのではないでしょうか。
+
+
+ありがとうございます。
+おそらく私は「販売できない数」＝「購入申し込みが完了している数」というのを
+文脈から読み取れてなかったみたいです。。。
+丁寧にご説明いただきありがとうございます。おかげさまで理解することが出来ました、
+```
+
+普通に考えて、キャンセルされた席は購入できる数にカウントすべきだよな。  
+でもってよーーーく考えてみれば、「販売可能」なわけだからね。  
+キャンセルされたら販売可能だよな？  
+
+■ c 正解  
+
+■ d 正解  
+
 ---
 
 ## ソフトウェア設計
+
+16分 【成績】全5問中 5問 回答/5問 正解　正解率:100.0%  
+
+やったぜ。  
+だんだん問題文を読みこむ感覚がわかってきた。  
+1回だけで全部の概要がわかりました。  
+運もあるんでしょうけど、手応えはあったので、いい問題だったと思います。  
+問題文を読みこむタイプの問題ですが、読みこむことに焦らなくなったのが大きい。  
+更に問題を読みながら、その先の図も確認することで更に頭に入りやすくなることがわかりました。  
+
+でもあれだ。頭が暑くなる。  
+仕方ないかもしれないが、この感覚にも慣れていかないといけない。  
+こんな感じでできるときとできない時の差が激しいのも何とかならんかね。  
 
 ---
 
