9月24日会社分

--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -83,6 +83,16 @@ PHP Warning:  foreach() argument must be of type array|object, null given in /wo
 ・memoだと何のメモだかわからないのでちゃんと名前を付ける。
 後でまとめる用のメモも作って、そうじゃない奴はちゃんと名前を付ける。
 
+・DDLまとめ
+・DB制約まとめ
+・ロックのまとめ
+
+・ネットワークのクラスの復習
+・スイッチは第何層で動く装置だったか。
+
+・gulpってなに？
+
+
 ---
 
 ## 終わったやつら
