--- a/BasicInformation/午後/平成30年春期.md
+++ b/BasicInformation/午後/平成30年春期.md
@@ -9,21 +9,101 @@
 ■ g 不正解  
 ■ h 不正解  
 
+うーん。この年の問題は油断しすぎたor深く考えすぎたって感じかなぁ。  
+前半2つはいいとして、問題は後半2つだ。  
+SQL系はなんとなくやって来たツケが回ってきた感じ。  
+主にNULLを含めた動作を再確認する必要があると思った。  
+ネットワークに関しては計算問題が出たら諦める方向でいいかなって思った。  
+単純な計算問題何だろうけど、何と何を比較すればいいか全然検討がつかなかった。  
+
+ORDER BY 句で昇順にすると、いつもNULLが後ろにくるのが嫌！  
+降順にすると、いつもNULLが先頭にくるのが嫌！  
+SQL の ORDER BY において、NULL 値は一番大きな値として扱われてしまうので、昇順の場合の表示順はいつも最後になってしまいます。  
+なるほどね。  
+
+COUNTではカウントされないし、ORDER BYでは常に最大値として認識される。  
+各命令文に置けるNULLの動作をまとめる必要があるな。  
+ここは明日やろう。  
+少し頭を冷やして復習することにする。  
+
 ---
 
 ## セキュリティー
+
+12分 【成績】全5問中 5問 回答/4問 正解　正解率:80.0%  
+
+話は全部わかったのだが、最後の問題の答えがどちらも有り得そうで間違えてしまった。  
+ストレッチングという単語の意味を知っていれば問題はなかったのかもしれないので、新しく覚えることにする。  
+
+**ストレッチング**  
+元データに対してハッシュ化の計算を数千回から数万回繰り返して、その結果をパスワードファイル等に記録しておく手法です。  
+ハッシュ関数には一方向性がありますから、あるハッシュ値が示すパスワードを特定するためには、攻撃者側でも1つのパスワード候補に対して同じ数だけのハッシュ化操作を行わなくてはならなくなります。  
+
+オフライン攻撃では、単位時間当たりに膨大な数の試行を行えます。ストレッチングなしの場合には、1つのパスワード候補に対して行われるハッシュ計算は1回なので短時間でパスワードを特定されてしまう恐れがあります。ストレッチングの実施により、1つのパスワード候補の検証に要する計算量を多くすることで、攻撃が成立するまでにかかる時間を長くすることができます。  
+
+∴エ：一つのパスワードの候補からハッシュ値を求める時間が増加する
+
+比較回数も増えるがそれ以上に時間がかかることが、この手法のメインと言ったところか。  
 
 ---
 
 ## ネットワーク
 
+29分 【成績】全5問中 5問 回答/3問 正解　正解率:60.0%  
+
+ネットワークを諦める口実が出来たかもしれない。  
+どちらかというと計算問題だったな。  
+ネットワークの効率と処理量から簡単に計算問題に持っていけるので、その手の問題が出たら切り捨てたほうがいいかも。  
+
+
 ---
 
 ## データベース
 
+11分 【成績】全4問中 4問 回答/2問 正解　正解率:50.0%  
+
+やべぇ。簡単だと思ってなめてたら結構落とし穴があった。  
+簡単だと思って油断してかかったらこの様だ。割とショック。
+
+CはCount(*)かSUMで迷った。  
+ということは、SQLの仕様を理解していないということなので、重点的な復習が必要。  
+
+■ c 不正解  
+SUM()は合計値を求める集計関数です。"イベント番号"の値の合計が表示されるので誤りです。  
+→  
+単純な事だった・・・。  
+そうだよな。SUMが件数のフィールドだったらまだしも、数値列にそんなことしたら数値の合計が取得されるよな。  
+
+COUNT(*)は行数を数えてくれる。  
+だがそれだけではないだろう。解説サイトを探そう。  
+[COUNT(*)　が何を意味しているのかわからない](https://ja.stackoverflow.com/questions/42915/count-%E3%81%8C%E4%BD%95%E3%82%92%E6%84%8F%E5%91%B3%E3%81%97%E3%81%A6%E3%81%84%E3%82%8B%E3%81%AE%E3%81%8B%E3%82%8F%E3%81%8B%E3%82%89%E3%81%AA%E3%81%84)  
+
+``` txt
+OracleではCOUNT(*)とCOUNT(age)の結果は異なります。
+ageにnullが入っているとCOUNT(age)では件数にカウントされません。
+グループ化していても同様で、ageがnullのグループのみ0件となります。
+COUNT(*)ではageにnullが入っていてもレコードの件数をカウントします。
+
+COUNT(*)ではレコードの内容を取得するため、COUNT('X')やSUM(1)を使った方が高速化できると教わったことがあります。(10年ほど前に聞いたノウハウなので現在も適用されるのかは不明ですが…)
+```
+
+なるほど。COUNTはNULLはカウントしないのね。  
+動作的にCOUNT(name)見たいにフィールド名を指定したほうが高速化できるっぽいけど、単純にレコード数を取得したいならCOUNT(*)でいいのか。  
+
+■ d 不正解  
+ポカミス。
+流れを見れば普通にわかる問題だった。  
+7って数字が見えて、嬉々として飛びついてしまったわけだ。  
+こういうところが自分にはあるので、いやまてよ？って習慣を作らないといけない。  
+
 ---
 
 ## ソフトウェア設計
+
+29分 【成績】全5問中 5問 回答/2問 正解　正解率:40.0%  
+
+この年、俺落ちたかもな。  
+
 
 ---
 
@@ -32,3 +112,17 @@
 ---
 
 ## Java
+
+
+
+
+集中力は消耗品。
+休憩がてら動画を見てますが、あれでも集中力を使っているぽいので休憩になっていないみたいです。
+純粋に集中力を回復指せるなら仮眠が一番だそうです。
+だから、休日にあまり進まずにモヤモヤしてたわけですね。
+
+
+平日の午後問題は2つ出来れば御の字と思っていたけど、発破かけてやれば4個は普通にいけるな。
+平日の勉強は残業の関係で除外して考えてたけど、このペースなら少し希望が見えてくる。
+やはり覚悟の問題だ。
+やばいって感覚こそ原動力になり得る。
