--- a/BasicInformation/午後/平成29年春期.md
+++ b/BasicInformation/午後/平成29年春期.md
@@ -29,6 +29,21 @@
 
 ## アルゴリズム
 
+30分オーバー 【成績】全7問中 7問 回答/6問 正解　正解率:85.7%  
+
+普通に難しかった。  
+粘ってトレースしたらそれなりに正解したが、変数が多すぎて全体を把握するのに時間がかかった。  
+こういうのは、時間が余ったときにできる戦略だなーって思った。  
+ゴリゴリにトレースする問題って、どういう力が必要になってくるのだろうか。  
+いまいちよくわからない。  
+
 ---
 
 ## Java
+
+20分 【成績】全7問中 7問 回答/6問 正解　正解率:85.7%  
+
+Javaは簡単だった。  
+1問、間違えたが、選び間違えただけで、考えていた答えは合っていた。  
+なので実質100点  
+このテストでは得られるものは何もなかったので、とっとと別の問題解きますか。  
