--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -29,6 +29,35 @@
 
 ## アルゴリズム
 
+28分 【成績】全6問中 6問 回答/5問 正解　正解率:83.3%  
+
+最後の問題を解ききれなかったけど、まぁ、苦手なアルゴリズムで8割一旦だからいいほうじゃないか？  
+最後の問題以外は普通にわかったので、最後だけ確認して次へ行く。  
+
+なるほど。よくよく見てみると、全部検証する必要はないパターンか。  
+どうしても一回検証してみたくなるけど、終盤でそんなことは時間的に厳しい。  
+基数番目が偶数番目である事に着目して、プログラムの特性を考えれば、そうなるわなって感じ。  
+
 ---
 
 ## Java
+
+30分 【成績】全7問中 7問 回答/4問 正解　正解率:57.1%  
+
+今回のJavaは難しいと感じた。  
+どこが難しかったのか。  
+記法から流れをイメージ出来なかった事だろうか。  
+これがJavaの書き方なのかなんなのか。底を調べる必要がある。  
+全体の流れも、なんとなくでしか理解出来なかった。  
+全体的にあんまりな出来だった。  
+
+なるほど。  
+解説をざっくり読んでみたが、プログラムをトレースするタイプではなく、推測するタイプだったか。  
+
+数値を文字列としてソートするのか、数値としてソートするのかという観点も抜けていた。  
+プログラムをミスリードした結果、どのようなソートを行っていいかわからなくなった。  
+だから難しいと感じたし、素直に解けなかったと感じたわけだ。  
+日本語ではなく、プログラムからイメージを膨らませる必要があった。  
+これがあるから、Javaとアルゴリズムは難しいのだ。  
+基本情報でやったJavaはJavaフォルダに持って行ったほうがいいだろう。  
+明日会社でやることにする。  
