--- a/Other/後でまとめる.md
+++ b/Other/後でまとめる.md
@@ -81,12 +81,9 @@ APIからのメッセージは_bodyプロパティの中にあるみたいが、
                 // 成功したら一覧を更新する
                 this.getPlanList();
             },
-            error => {
-                this.notify.error('失敗しました。\n : ' + error.json());
-            }
+            error => this.notify.error('失敗しました。\n : ' + error.json());
         )
         .then(() => this.isLoading = false);
-
 ```
 
 
@@ -100,3 +97,32 @@ RESTとGraphQLについて
 ## DDLについて
 
 [わかりそうデータ定義言語 (DDL)](https://wa3.i-3-i.info/word15639.html)
+
+
+## NULLのLIKE検索
+
+LIKE検索には引っかからない。
+
+## NULLのORDERBY
+
+[NULLと戯れる: ORDER BYとNULL](https://qiita.com/SVC34/items/c23341c79325a0a95979)  
+どうにも、NULLを最小値とするか最大値とするかは、RDBMS毎に違ったり、設定で変更出来たりするみたい。  
+Oracleは最大値扱いだが、SQLServerは最小値扱い見たい。  
+まぁ、どちらにせよ、先頭か末尾であることに違いはないということですね。  
+
+## COUNT(*)の意味とNULLのCOUNT
+
+[COUNT(*)　が何を意味しているのかわからない](https://ja.stackoverflow.com/questions/42915/count-%E3%81%8C%E4%BD%95%E3%82%92%E6%84%8F%E5%91%B3%E3%81%97%E3%81%A6%E3%81%84%E3%82%8B%E3%81%AE%E3%81%8B%E3%82%8F%E3%81%8B%E3%82%89%E3%81%AA%E3%81%84)  
+COUNT(*)は行数を数えてくれる。  
+
+``` txt
+OracleではCOUNT(*)とCOUNT(age)の結果は異なります。
+ageにnullが入っているとCOUNT(age)では件数にカウントされません。
+グループ化していても同様で、ageがnullのグループのみ0件となります。
+COUNT(*)ではageにnullが入っていてもレコードの件数をカウントします。
+
+COUNT(*)ではレコードの内容を取得するため、COUNT('X')やSUM(1)を使った方が高速化できると教わったことがあります。(10年ほど前に聞いたノウハウなので現在も適用されるのかは不明ですが…)
+```
+
+なるほど。COUNTはNULLはカウントしないのね。  
+動作的にCOUNT(name)見たいにフィールド名を指定したほうが高速化できるっぽいけど、単純にレコード数を取得したいならCOUNT(*)でいいのか。  
