9月26日会社分

--- a/Other/とりあえず.md
+++ b/Other/とりあえず.md
@@ -75,3 +75,44 @@ https://www.youtube.com/watch?v=E79Q5jR5mGk&ab_channel=%E7%82%BA%E6%9C%AB%E5%A4%
 自転車で左折するとき、スピード落とせよ。  
 自転車も一時停止しないといけない乗り物なのだ。  
 
+
+
+
+
+カレンダーに入れた予定に追いつきつつある。
+次の休みまでが、また踏ん張りどころだ。
+次の休みはさすがに9時までの睡眠をとりましょう。
+そしたらまたプログラミング祭りですよ。
+午前問題もまとめないとなぁ。
+
+目標は目標であって、別にそれを超えても問題はない。
+というか超えるべきだ。
+あれは最低限であって、必要十分ではない。
+
+早く復習したい。
+アルゴリズムをやりはしたけど、具体的な復習まで行けてない。
+ネットワークをやらない分をそこに充てたい。
+
+
+
+寒い。ズボンを冬用に変えた。
+髪はどんどんいい感じになっている。
+
+2年前の今日は富士山旅行に行った日か。
+感慨深いなぁ。
+家族に連絡したい。
+
+
+
+睡眠不足が常態化してきた。
+それほどまでに時間が圧迫されている。
+最近は8時間寝ることがない。
+7時間がデフォルトな気がする。
+
+唇はしっかり治りつつある。
+しかし、ここまで治るのに随分かかった気がするな。
+
+足が痛い。あの程度の散歩でも筋肉痛になるもんなんだな。
+休憩がてら仕事中に思いっきり仮眠したけど、やっぱり違う。
+短い時間でも頭がグワーッてなるあの感覚があったし、呼吸が睡眠してるときの浅さになっていたので、マジで疲れてたんだと思う。
+それを客観的に分析できる状態ってのも面白い。
