--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -29,7 +29,6 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・基本的なWPFプログラムを一通り理解したい。
 ・SSH鍵の生成方法
 ・CI/DIツールの導入方法
-・幅いっぱいのやつと中央のやつの違い
 ・php foreachのエラーのあれ
 ・whereの動作
 ・なぜwhere inは重いのか
@@ -114,3 +113,7 @@ Venderだけをダウンロートする事はできるのだろうか。
 結局リンクをたどらないとわからないって事はまとめ方がヘタって事だからね。  
 
 〆・phpアンパックを配列関係にまとめる。  
+
+〆・幅いっぱいのやつと中央のやつの違い  
+→とりあえず、もやもやしている部分はわかった。  
+ここから先も調べないといけないが、とりあえずは完了とする。  
