--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -9,17 +9,17 @@
 ■ g 不正解  
 ■ h 不正解  
 
-プログラミング系の問題が難しい時は技術系の問題が簡単なんてジンクスがあるのだろうか。  
-
 ---
 
 ## セキュリティー
 
-13分 【成績】全5問中 5問 回答/5問 正解　正解率:100.0%  
+8分 【成績】全5問中 5問 回答/4問 正解　正解率:80.0%  
 
-算数だった。  
-問題が雑だなって思いました。
-特に書くことはないです。  
+まぁ、簡単だったけど、最後はナチュラルに間違えた。  
+パスワード認証はネットワーク上を平文で流れると思ってたけど、実際のところ、サーバーが乗っ取られていたら～という前提だったらしい。  
+でもって、暗号化された通信経路上でパスワードがやり取りされるから、盗聴の心配はないので不正解だって。  
+まぁ、簡単過ぎてよく確認しなかった自分が悪いけどね。  
+20時半まで残業して22時に勉強をしているとどうしても雑になってしまう。  
 
 ---
 
@@ -29,24 +29,11 @@
 
 ## データベース
 
-18分 【成績】全5問中 5問 回答/4問 正解　正解率:80.0%  
-
-1問間違えたが、全体的には簡単だった。  
-間違えたのは制約に関する部分だったので、しっかり復習していきたい。  
-また、主キー制約はUNIQUE制約を含むのかどうかも確認したい。  
 
 ---
 
 ## ソフトウェア設計
 
-18分 【成績】全5問中 5問 回答/5問 正解　正解率:100.0%  
-
-うん。簡単だったな。  
-簡単と感じる問題はポカミスを除けばほぼ100％の正答率であることに気が付いた。  
-まぁ、当たり前か。  
-でも、面白い。4択なんだから、わかっていなくてもそれなりに正解しても良さそうなものだが、そうではないのだからな。  
-まぁ特に書くことはないです。  
-ちょっと流れ図を追うのに苦労したけど、気が付いてしまえば簡単でしたからね。  
 
 ---
 
