--- a/Other/後でまとめる.md
+++ b/Other/後でまとめる.md
@@ -59,17 +59,19 @@ fastcgi_intercept_errors on;
 
 ## APIのメッセージを表示する方法(Response型のメッセージを取得する方法)
 
-APIからのメッセージは_bodyプロパティの中にあるみたいが、素直にアクセスしようとすると存在しないというエラーになる。
-実行したときは存在するけど、コーディングの段階では存在しないみたいなパターン。
-これがJavascriptの仕様なのかTypescriptの仕様なのかはまた別でまとめる。
-取り出すときはres.json()でなぜか取り出せる。
-これも後でまとめる。
+APIからのメッセージは_bodyプロパティの中にあるみたいが、素直にアクセスしようとすると存在しないというエラーになる。  
+実行したときは存在するけど、コーディングの段階では存在しないみたいなパターン。  
+これがJavascriptの仕様なのかTypescriptの仕様なのかは、わからないが、それはまた別でまとめたい。  
+取り出すときはres.json()でなぜか取り出せる。  
+そういうものなのだろうか。これも後でまとめる。  
 
-``` TS
+``` ts
+    // Service
     public maintenance(param: any): Promise<Response> {
         return this.apiService.put('system/web-cooperation/plan-cooperation/maintenance/', JSON.stringify(param));
     }
     
+    // ViewModel
     this.goraMaintenanceService
         .maintenance(param)
         .then(
