--- a/BasicInformation/午後/平成28年春期.md
+++ b/BasicInformation/午後/平成28年春期.md
@@ -9,13 +9,12 @@
 ■ g 不正解  
 ■ h 不正解  
 
+28年春のアルゴリズムとJavaは簡単だった。  
+プログラムが何をしたいのかよくわかったので、トレース等も容易だった。  
+
 ---
 
 ## セキュリティー
-
----
-
-## ネットワーク
 
 ---
 
@@ -29,6 +28,33 @@
 
 ## アルゴリズム
 
+30分 【成績】全7問中 7問 回答/6問 正解　正解率:85.7%  
+
+31分位かかってしまったと思うけど、Javaが22分で終わったなら問題ない。  
+今回はプログラムの流れがわかったので、やりやすかった。  
+1つ間違ったのは正直、なんて間違ったのかわからないのでそれだけ復習して終わり。  
+
+後1つわかった事は、配列には具体的な値を入れてみると結構わかるってことかな。  
+これが以外と強力で最初の部分さえわかってしまえば後は芋づる式にわかるので、今後もやっていきたい。  
+
+■ b 不正解  
+あー。そっか。+1するタイミングの問題だ。  
+最後で+1しなくてもいいようになっているんだ。  
+ミスリードではないけど、そこまで考慮出来なかったってところかな。  
+
 ---
 
 ## Java
+
+22分 【成績】全7問中 7問 回答/6問 正解　正解率:85.7%  
+
+今回は簡単だった。  
+意図がわかった。1つミスしたのは痛い。よくよく考えてみれば簡単な事だったのに気が付かなかった。  
+この問題は特に復習しなくていいかな。  
+そもそもJavaを30分以内に終わらせることができる地点で勝ちだ。  
+
+■ e 不正解  
+
+boolを変数に代入する時の話だが、全部Trueじゃないといけないって考えから 「+=」を選択してしまった。  
+単純にfalseが帰ってきたらfalseになるだけなんだから、そんな事する必要なかったのにねぇー。  
+「+=」はbool型には使えない。整数の代入演算で使うものだから当然といえば当然か。  
