--- a/BasicInformation/午後/平成28年秋期.md
+++ b/BasicInformation/午後/平成28年秋期.md
@@ -15,10 +15,6 @@
 
 ---
 
-## ネットワーク
-
----
-
 ## データベース
 
 ---
@@ -29,6 +25,22 @@
 
 ## アルゴリズム
 
+29分 【成績】全6問中 6問 回答/4問 正解　正解率:66.7%  
+
+微妙。わかったようなわからないようなって感じ。  
+プログラムをトレースするようなタイプではなかった。  
+パターンに当てはめて考えるタイプの問題だな。  
+
+せめてもう1問位正解したかったなぁ。  
+
 ---
 
 ## Java
+
+30分 【成績】全7問中 7問 回答/6問 正解　正解率:85.7%  
+
+こっちもわかるようなわからないようなって感じだった。  
+コードの通りにトレースするんだけど、なぜあるのかわからない条件式とか、本当にその通りにトレースしてそうなるのか？  
+ってのが全然納得できなくて、いったり来たりしてこうなった。  
+まぁ、最終的に合ってたからいいけども、なんか釈然としない。  
+まぁ、でも全体的にわかるようになってきたというか、スムーズに読めるようになってきたというか、最初の時と比べたらずいぶんよくなったとは思うけどね。
