--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -23,17 +23,40 @@
 
 ---
 
-## ネットワーク
-
----
-
 ## データベース
 
+20分 【成績】全4問中 4問 回答/3問 正解　正解率:75.0%  
+
+あれぇ・・・。おかしいなぁ。  
+GroupByしたときのレコードのイメージがつかめなかったなぁ。  
+俺の弱いところの一つだと思う。  
+
+■ a 不正解  
+絞るのは販売表の会員番号。  
+主キーは伝票番号なので、その会員毎の伝票番号はグループされない。  
+その状態で、レコード？？？？？？？  
+
+あー・・・。  
+「分類がコーヒーである商品を5回以上購入し、かつ、その購入額の合計が10,000円以上である」  
+GROUP BY して SUMして10000円以上。 COUNTして5個以上。  
+普通にどっちも一回のGROUPBYで観測できることだよね。  
+1レコード毎に考えないといけないなんてミスリードしたからややこしくなったんだ。  
+
+まずWHERE句で日付と分類で絞った後、グループ化を行っています。そして  
+`SUM(商品表.単価 * 販売明細表.個数) >= 10000`  
+販売明細表の行ごとに計算した購入金額を合計したものが10,000円以上であること  
+`COUNT(*) >= 5`  
+行数、すなわち購入履歴が5件以上あることの2つの条件でグループを絞っています。  
 
 ---
 
 ## ソフトウェア設計
 
+25分 【成績】全6問中 6問 回答/3問 正解　正解率:50.0%  
+
+うん。会計の問題でよくわからなかった。  
+でも、解説を見てみると、どれもいい線は行っていたので、まぁ惜しかったかなって感じ。  
+そもそも消込処理って何ぞやってところも勉強したい。  
 
 ---
 
