--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -29,12 +29,9 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・基本的なWPFプログラムを一通り理解したい。
 ・SSH鍵の生成方法
 ・CI/DIツールの導入方法
-・php foreachのエラーのあれ
 ・whereの動作
 ・なぜwhere inは重いのか
 ・sql インデックス 仕組み
-
-逆引きの勉強がいい感じ。
 
 
 フロントの何に時間がかかるのか。
@@ -47,6 +44,7 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・時間があるときに、予約入力からチェックアウトまで流して、データがどうなるか観察してみればいい。
 人に頼らず、自分で学ぶとはそういうことだぞ。
 
+・php foreachのエラーのあれ
 Warning: Invalid argument supplied for foreach() とでたら。。。
 invalid argument supplied for foreach()
 PHP Warning:  foreach() argument must be of type array|object, null given in /workspace/Main.php on line 4
@@ -117,3 +115,5 @@ Venderだけをダウンロートする事はできるのだろうか。
 〆・幅いっぱいのやつと中央のやつの違い  
 →とりあえず、もやもやしている部分はわかった。  
 ここから先も調べないといけないが、とりあえずは完了とする。  
+
+〆・主キー制約とUNIQUEキー制約についてまとめる
