--- a/BasicInformation/午後/平成29年春期.md
+++ b/BasicInformation/午後/平成29年春期.md
@@ -23,10 +23,6 @@
 
 ---
 
-## ネットワーク
-
----
-
 ## データベース
 
 18分 【成績】全5問中 5問 回答/4問 正解　正解率:80.0%  
@@ -34,6 +30,67 @@
 1問間違えたが、全体的には簡単だった。  
 間違えたのは制約に関する部分だったので、しっかり復習していきたい。  
 また、主キー制約はUNIQUE制約を含むのかどうかも確認したい。  
+→  
+含む。主キーはUNIQUEキー制約と非NULL制約を含んだ制約だった。  
+
+■ 2.a 正解  
+
+外部キーと参照成約がセットなのはわかったけど、それが適応されるのは、参照先なのか参照元なのか。  
+
+``` txt
+問合せ記録表に追加される"ルールID"列は、ルール表の主キーである"ルールID"列を参照するので外部キーになります。
+外部キーとなる列には参照制約(外部キー制約)を付与します。
+外部キーには参照制約を付けるのは、参照先の行が存在することを保証しデータベースの不整合を防ぐためです。
+
+参照制約は、行の追加・更新および削除に次の制限を課します。
+行の登録・更新時に設定される外部キー列の値は、参照先の主キーの値として存在するものでなければならない。
+参照先の表において、主キーの値が別表から参照されている行は削除できない。
+```
+
+■ 2.b 不正解  
+
+[PostgreSQL - PRIMARY KEY (主キー) と UNIQUE の違い](https://esthersoftware.hatenablog.com/entry/deference-between-primarykey-and-unique-postgresql)  
+
+### PRIMARY KEY と UNIQUE の違いとは？
+
+Primary Key（主キー）とUniqueはどちらも「データが一意である」制約を設定するものです。それならこの2つに違いはあるの？と気になったので調べてみました。
+
+### PRYMARY KEY(主キー)
+
+・「テーブル内の行データを識別するために設定でき、重複した値を許さないカラム」のこと
+・複数のカラムに対して設定可能
+・NULLは許可されない
+・UNIQUE制約と非NULL制約を組み合わせたもの
+・この制約は一つのテーブルに対して一つしか設定できない
+
+[主キー（primary key）を複数のカラムに、その名は複合主キー（composite primary key ）](https://ts0818.hatenablog.com/entry/2017/02/04/162513)  
+
+主キーが1つだけしか許可されないなら、複数のカラムに主キーを設定してるあれはなんなの？  
+→  
+複数のカラムをまとめて複合キーとして、その複合キーに対して主キーを設定している。  
+なので主キーを実質1つしか設定していないことになるので、問題がないということ。  
+
+### UNIQUE制約
+
+・「カラムまたはカラムのグループに含まれるデータが、テーブル内の全ての行で一意であることを確実にする」ということ  
+・つまり行データを識別する必要は無いけれど、あるカラムに対して重複した値が入るのを禁止したいときに使う  
+
+・重複した値の入力が不可能になる。  
+・NULLは許可されている。  
+・この制約は一つのテーブルに対して複数設定することができる。  
+
+### まとめ
+
+・PRIMARY KEYもUNIQUEもデータに一意性を持たせる点は同じ  
+・目的によって使い分けができる  
+
+PRIMARY KEY : テーブル内の行データを特定するために一意性を持たせる。  
+UNIQUE制約 :  重複した値を格納したくないカラム（またはカラムのグループ）に一意性を持たせる。  
+
+というわけなので、このカラムとこのカラムを主キーにするってことは出来なくて、  
+このカラムとこのカラムを合わせて複合キーとして、その複合キーに対して主キーを設定するのはOK。  
+UNIQUEキーなら、このカラムとこのカラムにユニーク制約を課すってのはOK。  
+この違いが主キーとユニークキーの違いってところじゃないですかね。  
 
 ---
 
