--- a/BasicInformation/午後/平成28年春期.md
+++ b/BasicInformation/午後/平成28年春期.md
@@ -16,6 +16,22 @@
 
 ## セキュリティー
 
+9分 【成績】全5問中 5問 回答/5問 正解　正解率:100.0%  
+
+やっぱりセキュリティはオアシスだ。簡単過ぎる。  
+最後のパスワードの強度の計算。  
+指数は分配できるのか怪しかったのでそこだけまとめておこう。  
+まぁ、答えが合っていたのだから、合ってるのだろうけど。  
+
+``` math
+52^8／26^8\\
+=(2×26)^8／26^8\\
+=(2^8×26^8)／26^8\\
+=2^8
+```
+
+うん。普通に分配法則いけるよね。  
+
 ---
 
 ## データベース
