--- a/BasicInformation/午後/平成28年秋期.md
+++ b/BasicInformation/午後/平成28年秋期.md
@@ -13,6 +13,26 @@
 
 ## セキュリティー
 
+5分 【成績】全5問中 5問 回答/4問 正解　正解率:80.0%  
+
+5分で終わったｗｗｗｗ  
+まぁそれくらいで把握できる内容だったのはあるが、最後の1問はナチュラルに間違えた。  
+
+機密性、可用性、完全性がそれぞれどの行為に当たるのかっていう問題だったけど、可用性って割とあいまいだった。  
+これを機に、しっかり覚えることにする。  
+
+■ 3-c 不正解  
+
+**可用性**  
+1.障害が発生しても安定したサービスを提供できること  
+2.ユーザーが必要な時にシステムを利用できること  
+
+2は覚えてた。1の耐久性、冗長性についても可用性の領域なんだな。  
+
+タブレットの利用が2に該当すると思ったけど、違ったらしい。  
+「タブレットの活用によってシステムの使用性は向上しますが、情報セキュリティには関係がありません。」だって。  
+1に該当末する「Webサーバーのクラスタリング」が正解だった  
+
 ---
 
 ## データベース
