--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -58,6 +58,17 @@ GROUP BY して SUMして10000円以上。 COUNTして5個以上。
 でも、解説を見てみると、どれもいい線は行っていたので、まぁ惜しかったかなって感じ。  
 そもそも消込処理って何ぞやってところも勉強したい。  
 
+**消込(消込)**  
+消込とは、売掛金や買掛金など債権・債務の勘定科目の残高を消していく作業を指す。  
+例えば、売掛金の入金があった場合、支払い明細と照らし合わせながら入金されているデータを消していくことで、  
+売掛金が請求通りに回収できているか、残りの売掛金がデータ上と実際の入金でずれていないか、回収の遅れが出ていないかを把握することができる。  
+
+商品代金が入金された時に行う消込を「入金消込」といい、反対に代金を支払った時に行う消込は「支払い消込」という。  
+
+■ d 不正解  
+充当の完了していないレコード群を買上げ年月日の古い順に整列させておく必要があります。  
+年月日のデータでは、日付が古いほど値が小さくなるので、古い順にするには買上げ年月の昇順(値の小さい順)で整列させることになります。  
+
 ---
 
 ## アルゴリズム
