--- a/Other/勉強したいことリスト.md
+++ b/Other/勉強したいことリスト.md
@@ -89,6 +89,16 @@ PHP Warning:  foreach() argument must be of type array|object, null given in /wo
 
 ・gulpってなに？
 
+・プライベートとグローバルを覚えたい。
+・29年秋、設計
+・JavaEnum
+・405,Laravel
+・エラーコードを覚える。
+
+
+・明日の朝にワクチン予約してみる
+・重要な部分の撮影
+・買い物
 
 ---
 
